discussion/kv_engine/179182/179182_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53415: Merge remote-tracking branch 'couchbase/mad-hatter' into cheshire-cat

* couchbase/mad-hatter:
  MB-53415: Reset scan status for each item during warmup scan

Change-Id: I943e2e7db348e70255d270122d8fee6da79c807f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-08-24 17:54:11.000000000
Message: 
Uploaded patch set 2: New patch set was added with same tree, parents, and commit message as Patch Set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-08-24 17:54:26.000000000
Message: 
Patch Set 2: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/312253/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-24 17:58:50.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/355/ : ABORTED

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-cheshire-cat/kv_engine/engines/ep/src/warmup.cc:968:15:
error: use of undeclared identifier "ENGINE_SUCCESS"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/355/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/355/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/516/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/516/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/358/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/358/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/363/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/363/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/281/ : ABORTED

Compile error at [2022-08-24T17:58:35.087Z] ../kv_engine/engines/ep/src/warmup.cc:968:15:
error: ?ENGINE_SUCCESS? was not declared in this scope; did you mean ?EXIT_SUCCESS??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/281/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/281/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/349/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/warmup.cc:968:15: error: use of undeclared identifier "ENGINE_SUCCESS" [clang-diagnostic-error]
    setStatus(ENGINE_SUCCESS);
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:7832:19: error: no member named "engine_erc" in namespace "cb"; did you mean "engine_errc"? [clang-diagnostic-error]
    EXPECT_EQ(cb::engine_erc::success, gv.getStatus());
                  ^~~~~~~~~~
                  engine_errc
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/third_party/googletest/googletest/include/gtest/gtest.h:2028:63: note: expanded from macro "EXPECT_EQ"
  EXPECT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
                                                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/third_party/googletest/googletest/include/gtest/gtest_pred_impl.h:164:36: note: expanded from macro "EXPECT_PRED_FORMAT2"
  GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_NONFATAL_FAILURE_)
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/third_party/googletest/googletest/include/gtest/gtest_pred_impl.h:149:39: note: expanded from macro "GTEST_PRED_FORMAT2_"
  GTEST_ASSERT_(pred_format(#v1, #v2, v1, v2), \
                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/third_party/googletest/googletest/include/gtest/gtest_pred_impl.h:77:52: note: expanded from macro "GTEST_ASSERT_"
  if (const ::testing::AssertionResult gtest_ar = (expression)) \
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/include/memcached/engine_error.h:23:12: note: "engine_errc" declared here
enum class engine_errc {
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/349/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/warmup.cc:968:15:
error: use of undeclared identifier "ENGINE_SUCCESS" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/349/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/380/ : FAILURE

Compile error at [2022-08-24T17:57:27.488Z] ../kv_engine/engines/ep/src/warmup.cc:968:15:
error: use of undeclared identifier "ENGINE_SUCCESS"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/380/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/368/ : FAILURE

Compile error at [2022-08-24T17:56:05.591Z] ../kv_engine/engines/ep/src/warmup.cc:968:15:
error: use of undeclared identifier "ENGINE_SUCCESS"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/368/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/367/ : FAILURE

Compile error at [2022-08-24T17:56:30.454Z] ../kv_engine/engines/ep/src/warmup.cc:968:15:
error: use of undeclared identifier "ENGINE_SUCCESS"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/367/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18917/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
